<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application -->
    <string name="app_name">Yamba Service</string>
    <string name="menu_about">About</string>
    <string name="about_yamba">Yamba Service\n     @Twitter</string>
    <string name="perm_timeline_read_label">Timeline Read</string>
    <string name="perm_timeline_read_desc">Permission to read the timeline cache</string>
    <string name="perm_timeline_write_label">Timeline Write</string>
    <string name="perm_timeline_write_desc">Permission to write the timeline cache</string>
    <string name="perm_service_exec_label">Service Exec</string>
    <string name="perm_service_exec_desc">Permission to execute service methods</string>
    <string name="perm_receive_timeline_update">Permission to receive timeline update broadcasts</string>
    <string name="perm_receive_timeline_update_label">Timeline Update</string>
    <string name="perm_receive_post_complete">Permission to receive post complete broadcasts</string>
    <string name="perm_receive_post_complete_label">Post Complete</string>

    <!-- Account -->
    <string name="account_handle">Handle</string>
    <string name="account_handle_example">student</string>
    <string name="account_password">Password</string>
    <string name="account_password_example">password</string>
    <string name="account_endpoint">Endpoint</string>
    <string name="account_endpoint_example">http://yamba.marakana.com/api</string>
    <string name="err_empty_handle">Please supply a non-empty handle</string>
    <string name="err_empty_password">Please supply a non-empty password</string>
    <string name="err_empty_endpoint">Please supply a non-empty endpoint URI</string>


    <string name="account_submit">Create</string>
    <string name="account_failed">Failed to create account</string>
    <string name="account_err_unknown_type">Unrecognized account type</string>
    <string name="account_err_unknown_auth">Unrecognized authentication type</string>
    <string name="account_err_exists">Account already exists: please delete before creating a new one</string>

    <!-- Sync -->
    <string name="account_type">com.twitter.university.android.yamba.ACCOUNT</string>

    <!-- Provider -->
    <string name="yamba_authority">com.twitter.university.android.yamba</string>

</resources>
