<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".TweetFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_handle"
        style="@style/yambaText.medium"/>

    <EditText
        android:id="@+id/account_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:hint="@string/account_handle_example" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_password"
        style="@style/yambaText.medium"/>

    <EditText
        android:id="@+id/account_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:hint="@string/account_password_example"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_endpoint"
        style="@style/yambaText.medium"/>

    <EditText
        android:id="@+id/account_endpoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:hint="@string/account_endpoint_example" />

    <Button
        android:id="@+id/account_submit"
        style="@style/yambaText.button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:enabled="false"
        android:text="@string/account_submit" />

</LinearLayout>
